Fixed up some stuff. [0]

--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -5,6 +5,10 @@ layout: base
 <div class="post-detail">
     {{ content }}
 
+    <div class="post-detail__comments">
+        {% include c_comment_form.html %}
+    </div>
+
     <div class="post-detail__footer">
         <div class="post-detail__pagination pagination">
             {% if page.previous.url %}
