Fixed up some stuff. [8m0s]

--- a/source/_assets/scss/layouts/_post-detail.scss
+++ b/source/_assets/scss/layouts/_post-detail.scss
@@ -1,4 +1,8 @@
 .post-detail {
+  @at-root #{&}__comments {
+    margin: 1rem 2rem;
+  }
+
   @at-root #{&}__footer {
     @include outer-container;
   }
