--- a/source/_includes/c_comment_form.html
+++ b/source/_includes/c_comment_form.html
@@ -1,4 +1,4 @@
-<form method="post" action="https://api.staticman.net/v2/entry/myles/mylesbraithwaite.com/master/comments">
+<form method="post" action="https://api.staticman.net/v2/entry/myles/mylesbraithwaite.com/master/comments" class="form">
     <div class="form-field">
         <label for="id_name" class="form-label">Name</label>
         <input name="fields[name]" id="id_name" class="form-input form-input--text" type="text">
