Did a bunch of work.

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -13,6 +13,7 @@ $large-screen: 50rem;
 @import 'components/card';
 @import 'components/code-highlight';
 @import 'components/footer';
+@import 'components/footnotes';
 @import 'components/form';
 @import 'components/header';
 @import 'components/navigation';
