--- a/source/_includes/c_gallery.html
+++ b/source/_includes/c_gallery.html
@@ -5,7 +5,9 @@
     <div class="l-row gallery__row" data-image-count="{{ image_count }}">
         {% for image in images %}
         <div class="l-column {{ column_width }} gallery__column">
-            {% include c_image.html src=image.src alt=image.alt caption=image.caption %}
+            <a href="{{ image.src }}" title="{{ image.alt }}" class="gallery__image-link">
+                {% include c_image.html src=image.src alt=image.alt caption=image.caption %}
+            </a>
         </div>
         {% endfor %}
     </div>
