Did a bunch of work. [0]

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -15,6 +15,7 @@ $large-screen: 50rem;
 @import 'components/footer';
 @import 'components/footnotes';
 @import 'components/form';
+@import 'components/gallery';
 @import 'components/header';
 @import 'components/navigation';
 @import 'components/pagination';
