Did a bunch of work. [8m0s]

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -19,6 +19,7 @@ $large-screen: 50rem;
 @import 'components/header';
 @import 'components/navigation';
 @import 'components/pagination';
+@import 'components/read-next';
 @import 'components/responsive-elements';
 @import 'components/tag-cloud';
 
