--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -6,6 +6,10 @@ layout: base
     {{ content }}
 
     <div class="post-detail__comments">
+        <h3>Comments</h3>
+
+        {% capture post_slug %}{{ page.date | date: "%Y-%j" }}-{{ page.slug }}{% endcapture %}
+
         <div class="post-detail__comment-form">
             {% include c_comment_form.html %}
         </div>
