Fixed the format of some older posts. [0]

--- a/source/_includes/c_post_detail_footer.html
+++ b/source/_includes/c_post_detail_footer.html
@@ -5,7 +5,7 @@
             <div class="read-next__story-wrapper">
                 <span class="c-button read-next__button">Read this next</span>
 
-                <h2 class="read-next__title">{{ page.previous.title | improve }}</h2>
+                <h2 class="read-next__title">{{ page.previous.title | truncatewords: 5 | improve }}</h2>
 
                 <p class="read-next__excerpt">{{ page.previous.excerpt | strip_html | truncatewords: 10 }}</p>
             </div>
