:bug: alt wasn't getting rendered properly.
Signed-off-by: Myles Braithwaite <me@mylesbraithwaite.com>

--- a/source/_includes/c_image.html
+++ b/source/_includes/c_image.html
@@ -1,6 +1,6 @@
 <figure class="responsive-image">
     <div class="responsive-image__wrapper">
-        {% picture {{ include.src }} alt={{ include.alt }} class="responsive-image__image" %}
+        {% picture {{ include.src }} alt="{{ include.alt | improve }}" data-downloadable="true" class="responsive-image__image" %}
 
         {% if include.caption %}
         <figcaption class="responsive-image__caption">{{ include.caption }}</figcaption>
