:art: Fixing up some minor issues for v5 release.
 #1

--- a/source/_layouts/base.html
+++ b/source/_layouts/base.html
@@ -47,6 +47,9 @@ layout: compress
         <![endif]-->
 
         {% javascript picturefill/dist/picturefill %}
+
+        <link rel="openid2.provider" href="https://openid.stackexchange.com/openid/provider">
+        <link rel="openid2.local_id" href="https://openid.stackexchange.com/user/835eb470-181c-415a-8285-b0e01f251c39">
     </head>
 
     <body class="mylesbraithwaite_com-www {% if page.body_css_class %}mylesbraithwaite_com-www--{{ page.body_css_class | slugify }}{% endif %}">
