:rocket: Fixed up some issues for v5.
Signed-off-by: Myles Braithwaite <me@mylesbraithwaite.com>

--- a/source/_includes/c_piwik.html
+++ b/source/_includes/c_piwik.html
@@ -1,16 +1,16 @@
-{% if site.piwik_set_domains and site.piwik_base_url site.piwik_site_id %}
+{% if site.piwik %}
 <script type="text/javascript">
     var _paq = _paq || [];
 
-    _paq.push(["setDomains", ["{{ site.piwik_set_domains }}"]]);
+    _paq.push(["setDomains", ["{{ site.piwik.set_domains }}"]]);
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
 
     (function() {
-        var u = "//{{ site.piwik_base_url }}/";
+        var u = "//{{ site.piwik.baseurl }}/";
 
         _paq.push(['setTrackerUrl', u+'piwik.php']);
-        _paq.push(['setSiteId', '{{ site.piwik_site_id }}']);
+        _paq.push(['setSiteId', '{{ site.piwik.site_id }}']);
 
         var d = document,
             g = d.createElement('script'),
@@ -24,5 +24,5 @@
         s.parentNode.insertBefore(g,s);
     })();
 </script>
-<noscript><p><img src="//{{ site.piwik_base_url }}/piwik.php?idsite={{ site.piwik_site_id }}" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="//{{ site.piwik.baseurl }}/piwik.php?idsite={{ site.piwik.site_id }}" style="border:0;" alt="" /></p></noscript>
 {% endif %}
