:sparkles: Wrote a print stylesheet.
Signed-off-by: Myles Braithwaite <me@mylesbraithwaite.com>

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -28,3 +28,8 @@ $large-screen: 50rem;
 @import 'layouts/post-detail';
 @import 'layouts/post-list';
 @import 'layouts/post';
+
+
+@media print {
+  @import 'print';
+}
