--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -3,7 +3,13 @@ layout: base
 ---
 
 <div class="page__header {% if page.page_css_class %}page__header--{{ page.page_css_class | slugify }}{% endif %}">
-    <h1 class="page__title {% if page.page_css_class %}page__title--{{ page.page_css_class | slugify }}{% endif %}">{{ page.title }}</h1>
+    <h1 class="page__title {% if page.page_css_class %}page__title--{{ page.page_css_class | slugify }}{% endif %}">
+    {% if page.page_title %}
+        {{ page.page_title }}
+    {% else %}
+        {{ page.title }}
+    {% endif %}
+    </h1>
     {% if page.subtitle %}<h2 class="page__subtitle {% if page.page_css_class %}page__subtitle--{{ page.page_css_class | slugify }}{% endif %}">{{ page.subtitle }}</h2>{% endif %}
     {% if page.lead %}<p class="page__lead {% if page.page_css_class %}page__lead--{{ page.page_css_class | slugify }}{% endif %}">{{ page.lead }}</p>{% endif %}
 </div>
