--- a/source/_assets/scss/components/_blockquote.scss
+++ b/source/_assets/scss/components/_blockquote.scss
@@ -1,22 +1,22 @@
 .blockquote {
-  @at-root #{&}--screenplay {
+  &--screenplay {
     border-left: 0;
     font-family: $font-family-monospace;
     font-size: 12pt;
   }
 
-  @at-root #{&}__line {
+  &__line {
     padding: 2em 0;
   }
 
-  @at-root #{&}__character {
+  &__character {
     display: block;
     font-weight: normal;
     text-align: center;
     text-transform: uppercase;
   }
 
-  @at-root #{&}__expression {
+  &__expression {
     display: block;
     margin-left: -5em;
     text-align: center;
@@ -31,7 +31,7 @@
     }
   }
 
-  @at-root #{&}__dialogue {
+  &__dialogue {
     display: block;
     margin: 0 auto;
     max-width: 25em;
