--- a/source/_assets/scss/layouts/_post-list.scss
+++ b/source/_assets/scss/layouts/_post-list.scss
@@ -1,5 +1,5 @@
 .post-list {
-  @at-root #{&}__separator {
+  &__separator {
     background-color: lighten($colour-primary, 40%);
     width: 10rem;
   }
