--- a/source/_assets/scss/components/_gallery.scss
+++ b/source/_assets/scss/components/_gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
-  @at-root #{&}__row {}
+  &__row {}
 
-  @at-root #{&}__column {}
+  &__column {}
 
-  @at-root #{&}__image-link {}
+  &__image-link {}
 }
