--- a/source/_assets/scss/components/_tag-cloud.scss
+++ b/source/_assets/scss/components/_tag-cloud.scss
@@ -4,11 +4,11 @@
   margin-top: 1em;
   text-align: center;
 
-  @at-root #{&}__search {
+  &__search {
     width: 100%;
   }
 
-  @at-root #{&}__item {
+  &__item {
     display: inline-block;
     padding-left: .25em;
     padding-right: .25em;
