--- a/source/_assets/scss/layouts/_page.scss
+++ b/source/_assets/scss/layouts/_page.scss
@@ -1,12 +1,12 @@
 .page {
   min-height: 90vh;
 
-  @at-root #{&}__header {
+  &__header {
     border-bottom: 1px solid lighten($colour-cape-code, 60%);
     margin-bottom: $spacer-x;
   }
 
-  @at-root #{&}__header,
+  &__header,
            #{&}__content {
     @include media(min-width $large-screen) {
       @include span-columns(8);
@@ -14,5 +14,5 @@
     }
   }
 
-  @at-root #{&}__title {}
+  &__title {}
 }
