:art: Renamed all `#{&}` to `&`.

--- a/source/_assets/scss/_print.scss
+++ b/source/_assets/scss/_print.scss
@@ -214,6 +214,6 @@
   }
 
   &__logo,
-           #{&}__sections,
-           #{&}__separator { @extend %hide; }
+           &__sections,
+           &__separator { @extend %hide; }
 }
