--- a/source/_assets/scss/components/_archive.scss
+++ b/source/_assets/scss/components/_archive.scss
@@ -19,7 +19,7 @@
     vertical-align: middle;
 
     &-title,
-             #{&}-meta {
+             &-meta {
       display: block;
       margin-bottom: 0;
       margin-top: 0;
