:sparkles: Added support for Microformats2.

--- a/source/_includes/c_post_header.html
+++ b/source/_includes/c_post_header.html
@@ -4,14 +4,14 @@
     {% endif %}
 
     <div class="{% if include.post.feature_image %}post__header-overlay{% endif %}">
-        <h1 class="post__title {% if include.post.feature_image %}post__title--overlay{% endif %}">
+        <h1 class="post__title {% if include.post.feature_image %}post__title--overlay{% endif %} p-name">
             {% if include.post.bookmark %}
-                <a href="{% if include.post.bookmark.404 %}https://web.archive.org/web/{{ include.post.bookmark.url }}{% else %}{{ include.post.bookmark.url }}{% endif %}" class="post__link post__link--bookmark {% if include.post.feature_image %}post__link--overlay{% endif %}" {% if include.post.bookmark.title %}title="{{ include.post.bookmark.title }}{% endif %}">
+                <a href="{% if include.post.bookmark.404 %}https://web.archive.org/web/{{ include.post.bookmark.url }}{% else %}{{ include.post.bookmark.url }}{% endif %}" class="post__link post__link--bookmark {% if include.post.feature_image %}post__link--overlay{% endif %} u-in-reply-to" {% if include.post.bookmark.title %}title="{{ include.post.bookmark.title }}{% endif %}">
                     {{ include.post.title | improve }}
                 </a>
             {% endif %}
 
-            <a href="{{ include.post.url }}" class="post__link {% if include.post.feature_image %}post__link--overlay{% endif %}">
+            <a href="{{ include.post.url }}" class="post__link {% if include.post.feature_image %}post__link--overlay{% endif %} u-url">
                 {% if include.post.bookmark %}
                     {% include c_eyeglasses.svg css_class="post__link-icon" %}
                 {% else %}
@@ -21,12 +21,12 @@
         </h1>
 
         {% if include.post.abstract %}
-            <h2 class="post__abstract">{{ include.post.abstract | improve }}</h2>
+            <h2 class="post__abstract p-summary">{{ include.post.abstract | improve }}</h2>
         {% endif %}
 
         <p class="post__meta">
             Published on
-            <time class="post__published-date" datetime="{{ include.post.date | date_to_xmlschema }}">
+            <time class="post__published-date dt-published" datetime="{{ include.post.date | date_to_xmlschema }}">
                 {{ include.post.date | date: '%d %B, %Y' | improve }}
             </time>
             <span class="separator">|</span>
