--- a/source/_includes/post_bookmark.html
+++ b/source/_includes/post_bookmark.html
@@ -1,7 +1,7 @@
-<article class="post post--bookmark">
+<article class="post post--bookmark h-entry">
     {% include c_post_header.html post=post %}
 
-    <section class="post__content">
+    <section class="post__content e-content">
         {% if post.quote %}
         <blockquote class="blockquote" cite="{{ post.bookmark.url }}">
             {{ post.excerpt | improve }}
