--- a/source/_includes/post_quote.html
+++ b/source/_includes/post_quote.html
@@ -1,7 +1,7 @@
-<article class="post post--quote">
+<article class="post post--quote h-entry">
     {% include c_post_header.html post=post %}
 
-    <section class="post__content">
+    <section class="post__content e-content">
         {{ post.content }}
     </section>
 
