--- a/source/_layouts/post_list.html
+++ b/source/_layouts/post_list.html
@@ -2,10 +2,10 @@
 layout: post
 ---
 
-<div class="post post--list">
+<div class="post post--list h-entry">
     {% include c_post_header.html post=page %}
 
-    <section class="post__content">
+    <section class="post__content e-content">
         {{ content | improve }}
     </section>
 
