--- a/source/_layouts/post_quote.html
+++ b/source/_layouts/post_quote.html
@@ -2,10 +2,10 @@
 layout: post
 ---
 
-<div class="post post--quote">
+<div class="post post--quote h-entry">
     {% include c_post_header.html post=page %}
 
-    <section class="post__content">
+    <section class="post__content e-content">
         {{ content | improve }}
     </section>
 
